  [Michele Simionato]
  * Solved the hanging of classical calculations due to large zmq packets

  [Marco Pagani, Michele Simionato]
  * Added support for the "direct" method in MRD calculations

  [Michele Simionato]
  * Reimplemented the conditional_spectrum calculator as a post-processor

  [Paolo Tormene, Michele Simionato]
  * Raise an error when the same parameter is set in different sections
    of the job.ini file

  [Michele Simionato]
  * Fixed tau-phi inversion in LanzanoLuzi2019
  * Fixed another bug with conditioned GMFs appearing as the error
    `array[m, n, bad] = exp(mean_covs[0, g, m, n], im)
     TypeError: list indices must be integers or slices, not tuple`

  [Claudio Schill]
  * Fixed sorting bug in the sigma_mu adjustment factor in
    the Kuehn et al. (2020) GMM

  [Michele Simionato]
  * Fixed a subtle filtering bug in conditioned GMFs
  * Fixed shakemap calculations to take the risk IMTs and not the hazard IMTs
  * Extended shakemap2gmfs to amplify the GMFs based on user-provided vs30
    values
  * Removed sorting of the sections in the multiFaultSource reader to keep
    the rup_idxs consistent with the order in the files
  * GMFs too small to produce losses now give a warning rather than an error
  * Fixed bug in `get_ry0_distance` breaking conditioned GMFs
  * Made sure lon and lat are rounded to 5 digits in the site collection

  [Graeme Wheaterill]
  * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019

  [Michele Simionato]
  * Extended sensitity analysis to file parameters
  * Introduced new loss type `residents`

  [Marco Pagani]
  * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces

  [Michele Simionato]
  * Fixed the rupture exporter in presence of GMPETables
  * Optimized the postclassical phase
  * Fixed a serious issue in the classical calculator with tiles
  * Vectorized the association assets <-> hazard sites (up to 32x speedup)