@@ -33,6 +33,7 @@ soft_mem_limit = 90
 hard_mem_limit = 99
 
 [dbserver]
+user = openquake
 file = ~/oqdata/db.sqlite3
 # daemon bind address; must be a valid IP address
 # example: 0.0.0.0
